# gitlab_weeek_mr_webhook

./: .gitignore  Cargo.toml  README.md  api.service  compose.yaml  example-environs.bash  example.env  nginx.conf  webhook_template.json  weeek_push_mr.json
.github/workflows/: tests.yaml
gitlab/: compose.yaml
src/: client.rs  constants.rs  lib.rs  loggers.rs  main.rs  services.rs  structures.rs  tasks.rs  utils.rs
tests/: integration_test.rs  support.rs  unit_test.rs
