[package]
name = "gitlab_weeek_mr_webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
regex = "1.11.1"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.5"
cargo-llvm-cov = "0.6.14"
mockall = "0.13.0"
async-trait = "0.1.83"
