[package]
name = "gitlab_weeek_mr_webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
actix-web = "4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
regex = "1.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
