[package]
name = "gitlab_weeek_mr_webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
actix-web = "4.9.0"
reqwest = { version = "0.12.12", features = ["json", "cookies"] }
regex = "1.11.1"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
env_logger = "0.11.6"
minijinja = "2.7.0"
